--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "city_explorer_api",
   "version": "1.0.0",
-  "description": "",
+  "description": "**Author**: Mohmmad **Version**: 1.0.0 (increment the patch/fix version number if you make more commits past your first submission)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/MohmmadNada/city_explorer_api#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "superagent": "^6.1.0"
+  },
+  "devDependencies": {}
 }
