--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT=3000
 GEOCODE_API_KEY=pk.3ba14fc0b295745b8ca85f727ec2452f
 WEATHER_API_KEY=003c64ec8e664a2fadbae17d2579243a
 PARKS_API_KEY=RtXUsBSMPG468B0c9qrCjaIwa1wEaRjNdQjBxeHX
+DATABASE_URL=postgres://mohammad:0000@localhost:5432/cityexp
+MOVIE_API_KEY=2f26d5788af0db2b2b3066cb7394f5b7
+YELP_API_KEY =jv9OJrxclp2BHwI6S7BxigScdAEJxzvsWiMzC_abntmrY9MF6i_GG3x_2g2M3eCdykEWgUF4AHyVDbBzgTkWkyHOgxx1EBgfGSL_Ff0IyZX4JWV6mbDT71xo_2hnYHYx
+
+
